# Mugen

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  __main__.py  pyproject.toml
.github/workflows/: format-and-lint.yml
assets/shaders/: chunk.frag  chunk.vert  cloud.frag  cloud.vert  cube.frag  cube.vert  quad.frag  quad.vert  water.frag  water.vert
mugen/: __init__.py
mugen/components/: __init__.py  chunk.py  cloud.py  handler.py  water.py  world.py
mugen/core/: __init__.py  engine.py  player.py
mugen/renderer/: __init__.py  camera.py  frustum.py  marker.py  scene.py  shader.py  textures.py
mugen/renderer/meshes/: __init__.py  base.py  chunk.py  cloud.py  cube.py  quad.py  water.py
mugen/utils/: __init__.py  constants.py  logging.py  mesh_builder.py  noise_generator.py
